objects/LLC_BI__Service_Mgmt__c.object
<CustomObject>
    <description>This object allows the user to track high level information about a service that also includes lookups and relationships to multiple other objects.</description>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system uses this lookup field to determine the account that is being serviced. By default, this field is blank.</description>
        <inlineHelpText>Enter the correct Account object lookup in this field.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Mgmt</relationshipLabel>
        <relationshipName>Service_Mgmt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system uses this lookup field to determine the Collateral Mgmt object that is being serviced. By default, this field is blank.</description>
        <inlineHelpText>Enter the correct Collateral Mgmt object lookup in this field.</inlineHelpText>
        <label>Collateral Mgmt</label>
        <referenceTo>LLC_BI__Collateral__c</referenceTo>
        <relationshipLabel>Service Mgmt</relationshipLabel>
        <relationshipName>Service_Mgmt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system uses this lookup field to determine the Contact that is being serviced. By default, this field is blank.</description>
        <inlineHelpText>Enter the correct Contact object lookup in this field.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Mgmt</relationshipLabel>
        <relationshipName>Service_Mgmt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Context_Id__c</fullName>
        <description>The system populates this required text field to indicate that this is the object being serviced.</description>
        <inlineHelpText>Indicates the item being serviced.</inlineHelpText>
        <label>Context Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Highest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user populates this lookup field to specify the related Service Mgmt object. The default value is blank.</description>
        <inlineHelpText>Enter the related Service Mgmt object lookupKey in this field to determine the related Service Mgmt record.</inlineHelpText>
        <label>Highest</label>
        <referenceTo>LLC_BI__Service_Mgmt__c</referenceTo>
        <relationshipLabel>Service Mgmts (Highest)</relationshipLabel>
        <relationshipName>Highest_Service_Mgmts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system uses this lookup field to determine the Loan being serviced. By default, this field is blank.</description>
        <inlineHelpText>Enter the correct Loan object lookup in this field.</inlineHelpText>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Service Mgmt</relationshipLabel>
        <relationshipName>Service_Mgmt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Service_Provider_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system uses this lookup fields to determine which Contact is providing the service. By default, this field is blank.</description>
        <inlineHelpText>Enter the Contact lookup providing the service in this field.</inlineHelpText>
        <label>Service Provider Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Mgmt Provided</relationshipLabel>
        <relationshipName>Service_Mgmt_Provided</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Service_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system uses this lookup fields to determine which Account is providing the service. By default, this field is blank.</description>
        <inlineHelpText>Enter the Account lookup providing the service in this field.</inlineHelpText>
        <label>Service Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Mgmt Provided</relationshipLabel>
        <relationshipName>Service_Mgmt_Provided</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Service_Type__c</fullName>
        <description>The user populates this picklist field to determine the service type. By default, this field is blank.</description>
        <inlineHelpText>Select the correct Service type.</inlineHelpText>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Appraiser</fullName>
                </value>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Inspector</fullName>
                </value>
                <value>
                    <fullName>Third Party Reports</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>The user selects this optional picklist field to indicate if the service if active, inactive, or pending. By default, this field is blank.</description>
        <inlineHelpText>Select the appropriate status of the service.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Service Mgmt</label>
    <nameField>
        <displayFormat>SM-{000000000}</displayFormat>
        <label>Service Mgmt Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Mgmt</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>